# NorthAx

./: .gitignore  BACKEND_SPEC.md  INTEGRATION.md  README.md
backend/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: __init__.py  config.py  db.py  deps.py  errors.py  main.py  models.py  rate_limit.py  schemas.py  security.py  seed.py
backend/app/engines/: __init__.py  enums.py  plan.py  readiness.py  strength.py  workouts.py
backend/app/jobs/: tasks.py  worker.py
backend/app/routers/: activities.py  ai.py  auth.py  garmin.py  goals.py  intervals.py  metrics.py  plan.py  preferences.py  readiness.py  segments.py  strava.py  user.py
backend/app/services/: ai.py  garmin.py  goal_progress.py  intervals.py  mappers.py  metrics_assembly.py  plan_ai.py  plan_push.py  plan_service.py  polyline.py  strava.py  streams.py
backend/deploy/raspberry-pi/: README.md  northax-api.service  northax-worker.service  setup.sh  update.sh
backend/docs/: README.md  openapi.json  openapi.yaml
backend/scripts/: export_openapi.py
backend/sql/: schema.sql
backend/sql/migrations/: 0001_email_password_auth.sql  0002_per_sport_schedule_and_thresholds.sql  0003_multi_source_metrics.sql  0004_vo2max.sql  0005_strava.sql  0007_sport_targets.sql  (+5 more)
backend/tests/: conftest.py  test_ai_guardrail.py  test_api_integration.py  test_auth_flow.py  test_goal_progress.py  test_intervals_mapping.py  test_metrics_assembly.py  test_plan_engine.py  test_readiness_engine.py  test_segments.py  test_streams.py  test_strength_engine.py  test_workouts.py
(+214 files in other folders)
