[project]
name = "northax-backend"
version = "0.1.0"
description = "NorthAx training OS backend — deterministic engines + Claude AI explanation layer"
requires-python = ">=3.11"  # 3.11 = Raspberry Pi OS Bookworm default (prod target)
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pyjwt[crypto]>=2.10",
    "cryptography>=44.0",
    "httpx>=0.28",
    "redis>=5.2",
    "apscheduler>=3.11",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
# AI runs via the Claude Code CLI (`claude -p`) by default. Install this extra
# only to swap the AI layer back to the Anthropic HTTP SDK.
api = [
    "anthropic>=0.40",
]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "pyyaml>=6.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]
